syntax = "proto3";

package kuma.mesh.v1alpha1;

option go_package = "v1alpha1";

// Mesh defines configuration of a single mesh.
message Mesh {

  // mTLS settings of a Mesh.
  message Mtls {

    // Certificate Authority of a Mesh.
    // +optional
    CertificateAuthority ca = 1;

    // If true, then mTLS will be enabled for given mesh
    bool enabled = 2;
  }

  // mTLS settings.
  // +optional
  Mtls mtls = 1;

  // Tracing settings.
  // +optional
  Tracing tracing = 2;

  // Logging settings.
  // +optional
  Logging logging = 3;
}

// CertificateAuthority defines configuration of a CA.
message CertificateAuthority {

  // Builtin defines configuration of the builtin CA.
  message Builtin {}

  oneof type {

    // Use builtin CA.
    Builtin builtin = 1;
  }
}

// Tracing defines tracing configuration of the mesh.
message Tracing {

  // Zipkin defined configuration of Zipkin tracer.
  message Zipkin {

    // Address of Zipkin collector.
    string address = 1;
  }

  oneof type {

    // Use Zipkin tracer.
    Zipkin zipkin = 1;
  }
}

message Logging {

  message AccessLogs {

    bool enabled = 1;

    string filePath = 2;
  }

  AccessLogs accessLogs = 1;
}